--- a/index.html
+++ b/index.html
@@ -967,16 +967,38 @@
           return skills
             .map(
               (skill, index) => `
-                    <div class="form-check skill-levels" data-skill="${skill.name}" data-section="${sectionId}">
-                        <label class="form-check-label skill-name">${skill.name}</label>
+                    <div class="form-check skill-levels" data-skill="${
+                      skill.name
+                    }" data-section="${sectionId}">
+                        <label class="form-check-label skill-name">${
+                          skill.name
+                        }${
+                skill.info
+                  ? `<button class="essence-info-btn" onclick="showInfo('skill-${skill.name
+                      .replace(/\s+/g, "-")
+                      .toLowerCase()}', '${skill.name}', \`${
+                      skill.info
+                    }\`)" title="Informações sobre ${skill.name}">ℹ</button>`
+                  : ""
+              }</label>
                         <div class="skill-level-boxes">
-                            <input class="form-check-input skill-level" type="checkbox" id="${sectionId}_${index}_1" data-skill="${skill.name}" data-section="${sectionId}" data-level="1" onclick="toggleSkillLevel(this, 1)">
+                            <input class="form-check-input skill-level" type="checkbox" id="${sectionId}_${index}_1" data-skill="${
+                skill.name
+              }" data-section="${sectionId}" data-level="1" onclick="toggleSkillLevel(this, 1)">
                             <label class="level-label" for="${sectionId}_${index}_1">1</label>
-                            <input class="form-check-input skill-level" type="checkbox" id="${sectionId}_${index}_2" data-skill="${skill.name}" data-section="${sectionId}" data-level="2" onclick="toggleSkillLevel(this, 2)">
+                            <input class="form-check-input skill-level" type="checkbox" id="${sectionId}_${index}_2" data-skill="${
+                skill.name
+              }" data-section="${sectionId}" data-level="2" onclick="toggleSkillLevel(this, 2)">
                             <label class="level-label" for="${sectionId}_${index}_2">2</label>
-                            <input class="form-check-input skill-level" type="checkbox" id="${sectionId}_${index}_3" data-skill="${skill.name}" data-section="${sectionId}" data-level="3" onclick="toggleSkillLevel(this, 3)">
+                            <input class="form-check-input skill-level" type="checkbox" id="${sectionId}_${index}_3" data-skill="${
+                skill.name
+              }" data-section="${sectionId}" data-level="3" onclick="toggleSkillLevel(this, 3)">
                             <label class="level-label" for="${sectionId}_${index}_3">3</label>
-                            <button class="btn btn-xs btn-outline-success ms-2" onclick="rollSkill('${sectionId}', '${skill.name}')" title="Rolar ${skill.name}" style="font-size: 10px; padding: 2px 6px;">
+                            <button class="btn btn-xs btn-outline-success ms-2" onclick="rollSkill('${sectionId}', '${
+                skill.name
+              }')" title="Rolar ${
+                skill.name
+              }" style="font-size: 10px; padding: 2px 6px;">
                               🎲
                             </button>
                         </div>
@@ -1223,7 +1245,10 @@
           onClick: "handleSectionClick('conhecimento')",
           attribute: { label: "CON", dataAttribute: "con" },
           skills: [
-            { name: "Cartografia" },
+            {
+              name: "Cartografia",
+              info: " Descrição: Implica na capacidade do jogador elaborarmapas e/ou compreender-los.Nível 1: Permite ao jogador ler qualquer tipo de mapasimples e se guiar por ele sem dificuldade.Nível 2: O segundo nível agracia o jogador com acapacidade de, dado um pouco de conhecimento deambiente, elaborar mapas ou preencher mapasincompletos.Nível 3: Ao terceiro nível, qualquer mapa pode ser lidopelo jogador (comuns e mágicos), além disso, o jogador écapaz de otimizar rotas e encontrar atalhos comfacilidade, dobrando a velocidade de viagem de qualquerum que o acompanhe. Por fim, o jogador podeconfeccionar mapas de altíssima qualidade.",
+            },
             { name: "Ciências" },
             { name: "Demolição" },
             { name: "Investigação" },
@@ -3781,7 +3806,7 @@
                         ${essence.name} (${essence.cost})${
                       essence.info
                         ? `<button class="essence-info-btn" 
-                                               onclick="showEssenceInfo('${essence.id}', '${essence.name}', \`${essence.info}\`)" 
+                                               onclick="showInfo('${essence.id}', '${essence.name}', \`${essence.info}\`)" 
                                                title="Ver informações sobre ${essence.name}">ℹ</button>`
                         : ""
                     }
@@ -4491,35 +4516,38 @@
         }
       }
 
-      // Essence info popup functions
-      function showEssenceInfo(essenceId, essenceName, essenceInfo) {
+      // Generic info popup functions that can be reused for any type of content
+      function showInfo(type, title, content, customClasses = "") {
+        const overlayId = `${type}-info-overlay`;
+        const popupId = `${type}-info-popup`;
+
         // Create overlay if it doesn't exist
-        let overlay = document.getElementById("essence-info-overlay");
+        let overlay = document.getElementById(overlayId);
         if (!overlay) {
           overlay = document.createElement("div");
-          overlay.id = "essence-info-overlay";
-          overlay.className = "essence-info-popup-overlay";
-          overlay.onclick = hideEssenceInfo;
+          overlay.id = overlayId;
+          overlay.className = `essence-info-popup-overlay ${customClasses}`;
+          overlay.onclick = () => hideInfo(type);
           document.body.appendChild(overlay);
         }
 
         // Create popup if it doesn't exist
-        let popup = document.getElementById("essence-info-popup");
+        let popup = document.getElementById(popupId);
         if (!popup) {
           popup = document.createElement("div");
-          popup.id = "essence-info-popup";
-          popup.className = "essence-info-popup";
+          popup.id = popupId;
+          popup.className = `essence-info-popup ${customClasses}`;
           document.body.appendChild(popup);
         }
 
         // Set popup content
         popup.innerHTML = `
           <div class="essence-info-popup-header">
-            <h3 class="essence-info-popup-title">${essenceName}</h3>
-            <button class="essence-info-popup-close" onclick="hideEssenceInfo()" title="Fechar">×</button>
+            <h3 class="essence-info-popup-title">${title}</h3>
+            <button class="essence-info-popup-close" onclick="hideInfo('${type}')" title="Fechar">×</button>
           </div>
           <div class="essence-info-popup-content">
-            ${essenceInfo}
+            ${content}
           </div>
         `;
 
@@ -4527,13 +4555,19 @@
         overlay.classList.add("show");
         popup.classList.add("show");
 
+        // Store current popup type for escape key handling
+        document.body.dataset.currentPopupType = type;
+
         // Prevent body scroll
         document.body.style.overflow = "hidden";
       }
 
-      function hideEssenceInfo() {
-        const overlay = document.getElementById("essence-info-overlay");
-        const popup = document.getElementById("essence-info-popup");
+      function hideInfo(type) {
+        const overlayId = `${type}-info-overlay`;
+        const popupId = `${type}-info-popup`;
+
+        const overlay = document.getElementById(overlayId);
+        const popup = document.getElementById(popupId);
 
         if (overlay) {
           overlay.classList.remove("show");
@@ -4542,14 +4576,25 @@
           popup.classList.remove("show");
         }
 
+        // Clear current popup type
+        delete document.body.dataset.currentPopupType;
+
         // Restore body scroll
         document.body.style.overflow = "";
       }
 
-      // Close popup with Escape key
+      // Hide any currently visible popup
+      function hideCurrentPopup() {
+        const currentType = document.body.dataset.currentPopupType;
+        if (currentType) {
+          hideInfo(currentType);
+        }
+      }
+
+      // Close popup with Escape key - now works with any popup type
       document.addEventListener("keydown", function (event) {
         if (event.key === "Escape") {
-          hideEssenceInfo();
+          hideCurrentPopup();
         }
       });
     </script>
