--- a/index.html
+++ b/index.html
@@ -3354,7 +3354,7 @@
           close: ["morte", "ilusorio"],
         },
         material: {
-          close: ["conjurdor", "vida"],
+          close: ["conjurador", "vida"],
         },
         ilusorio: {
           close: ["morte", "energetico"],
