feat: magic dice multiplier

--- a/index.html
+++ b/index.html
@@ -3117,6 +3117,23 @@
             }
           });
 
+          let multiplier = 1;
+          if (
+            this.componentSelections &&
+            this.componentSelections["dice_multiplier"]
+          ) {
+            const multValue = parseInt(
+              this.componentSelections["dice_multiplier"]
+            );
+            if (!isNaN(multValue) && multValue > 0) {
+              multiplier = multValue;
+            }
+          }
+
+          Object.keys(diceMap).forEach((diceType) => {
+            diceMap[diceType] *= multiplier;
+          });
+
           // Format final dice string
           const diceStrings = Object.keys(diceMap)
             .sort((a, b) => {
@@ -3130,8 +3147,7 @@
         }
 
         // Get final dice as display string
-        getFinalDiceDisplay() {
-          const finalDice = this.getFinalDice();
+        getFinalDiceDisplay(finalDice) {
           return finalDice === "0" ? "Nenhum dado" : finalDice;
         }
 
@@ -3605,6 +3621,19 @@
                 { id: "pesado", name: "Pesado", costModifier: 0.8 },
               ],
             },
+            {
+              id: "dice_multiplier",
+              title: "Multiplicador de Dados",
+              description: "Multiplicador de dados para a magia",
+              required: true,
+              options: [
+                { id: "1", name: "1", costModifier: 1.0 },
+                { id: "2", name: "2", costModifier: 3 },
+                { id: "3", name: "3", costModifier: 6 },
+                { id: "4", name: "4", costModifier: 9 },
+                { id: "5", name: "5", costModifier: 12 },
+              ],
+            },
           ];
 
           this.componentFields = defaultComponentFieldsConfig.map((config) =>
@@ -3893,7 +3922,9 @@
           );
           const essencesDisplay = magic.getEssencesDisplay();
           const proximityDetails = magic.getHemisphereProximityDetails();
-          const diceDisplay = magic.dice || magic.getFinalDiceDisplay();
+          const finalDice = magic.getFinalDice();
+          const diceDisplay =
+            magic.dice || magic.getFinalDiceDisplay(finalDice);
           const hasDice =
             diceDisplay && diceDisplay !== "Nenhum dado" && diceDisplay !== "0";
 
@@ -4285,10 +4316,26 @@
         });
 
         // Create temporary magic to calculate dice
-        const tempMagic = new Magic("temp", {}, essenceQuantities);
+        const componentSelects = document.querySelectorAll(
+          ".magic-component-select"
+        );
+        const componentSelections = {};
+        componentSelects.forEach((select) => {
+          const fieldId = select.dataset.fieldId;
+          const value = select.value;
+          if (value) {
+            componentSelections[fieldId] = value;
+          }
+        });
+
+        const tempMagic = new Magic(
+          "temp",
+          componentSelections,
+          essenceQuantities
+        );
 
         const finalDice = tempMagic.getFinalDice();
-        const finalDiceDisplay = tempMagic.getFinalDiceDisplay();
+        const finalDiceDisplay = tempMagic.getFinalDiceDisplay(finalDice);
 
         const finalDiceDisplayElement = document.getElementById(
           "calculated-final-dice"
