fix: magic duration

--- a/index.html
+++ b/index.html
@@ -3463,10 +3463,11 @@
               required: true,
               options: [
                 { id: "instant", name: "Instantânea", costModifier: 1.0 },
-                { id: "short", name: "Curta", costModifier: 2.0 },
-                { id: "medium", name: "Média", costModifier: 2.2 },
-                { id: "long", name: "Longa", costModifier: 2.4 },
-                { id: "permanent", name: "Permanente", costModifier: 4.0 },
+                { id: "1_minute", name: "1 minuto", costModifier: 2.0 },
+                { id: "5_minute", name: "5 minutos", costModifier: 2.2 },
+                { id: "10_minute", name: "10 minutos", costModifier: 2.4 },
+                { id: "1_hour", name: "1 hora", costModifier: 4.0 },
+                { id: "3_hour", name: "3 horas", costModifier: 4.2 },
                 { id: "6_hours", name: "Até 6 horas", costModifier: 4.5 },
                 { id: "1_day", name: "Até 1 dia", costModifier: 6.0 },
                 { id: "7_days", name: "Até 7 dias", costModifier: 7.0 },
