--- a/fac_09.html
+++ b/fac_09.html
@@ -1343,8 +1343,8 @@
           ],
           prestigios: [
             {
-              name: "Alquimia",
-              info: "Requisito: Conhecimento ou Magia. O personagem é versado na arte da alquimia e criação de poções.",
+              name: "Acadêmico",
+              info: "Requisito: Você estuda com o professor Gabriel Ikawa.",
             },
             {
               name: "Mestre de Venenos",
@@ -1442,10 +1442,6 @@
             {
               name: "Fé",
               info: "Requisito: Cultura ou Magia. O personagem possui uma fé profunda que lhe concede poderes divinos.",
-            },
-            {
-              name: "Política",
-              info: "Requisito: Cultura ou Social. O personagem entende os complexos sistemas políticos e é hábil em negociações diplomáticas.",
             },
           ],
         },
@@ -1546,6 +1542,10 @@
             {
               name: "Artíficer",
               info: "Requisito: Manufatura. O personagem é um mestre artesão capaz de criar itens mágicos e artefatos complexos.",
+            },
+            {
+              name: "Alquimia",
+              info: "Requisito: Conhecimento ou Magia. O personagem é versado na arte da alquimia e criação de poções.",
             },
           ],
         },
@@ -1706,14 +1706,6 @@
             {
               name: "Alquimia",
               info: "Requisito: Conhecimento ou Magia. O personagem é versado na arte da alquimia e criação de poções.",
-            },
-            {
-              name: "Fé",
-              info: "Requisito: Cultura ou Magia. O personagem possui uma fé profunda que lhe concede poderes divinos.",
-            },
-            {
-              name: "Mestre de Venenos",
-              info: "Requisito: Conhecimento. O personagem é especialista na criação e uso de venenos mortais.",
             },
           ],
         },
