fix: prestigios (again)

--- a/fac_09.html
+++ b/fac_09.html
@@ -1489,6 +1489,10 @@
               name: "Furioso",
               info: "Requisito: Atletismo. O personagem pode entrar em fúria de batalha, aumentando significativamente suas habilidades físicas.",
             },
+            {
+              name: "Marcial",
+              info: "Requisito: Combate. O personagem é um mestre em artes marciais e técnicas de combate avançadas.",
+            },
           ],
         },
         {
@@ -1589,6 +1593,10 @@
               name: "Marcial",
               info: "Requisito: Combate. O personagem é um mestre em artes marciais e técnicas de combate avançadas.",
             },
+            {
+              name: "Furioso",
+              info: "Requisito: Atletismo. O personagem pode entrar em fúria de batalha, aumentando significativamente suas habilidades físicas.",
+            },
           ],
         },
         {
@@ -1650,6 +1658,10 @@
             {
               name: "Companheiro Animal",
               info: "Requisito: Sobrevivência. O personagem possui um companheiro animal leal que o auxilia em aventuras.",
+            },
+            {
+              name: "Mestre de Venenos",
+              info: "Requisito: Conhecimento. O personagem é um especialista em criar e utilizar venenos.",
             },
           ],
         },
